# repo-guardian-JhonCruz

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml  requirements.txt  run-ci-local.sh  setup.py  test-results.xml
.github/workflows/: ci.yml  draft-release.yml
docs/: dag.mmd
features/: pack_truncate.feature
features/steps/: step_impl.py
fixtures/pack-corrupt.git/objects/pack/: pack-1234.pack  pack-corrupt.pack
repo_guardian.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: post-merge
src/guardian/: __init__.py  cli.py  dag_builder.py  jw_detector.py  object_scanner.py
src/repo_guardian.egg-info/: SOURCES.txt  entry_points.txt
tests/: test_cli.py  test_dag_builder.py  test_dummy.py  test_jw_detector.py  test_object_scanner.py
