[project]
name = "repo-guardian"
version = "0.1.0"
description = "CLI/TUI tool to audit and repair Git repositories"
authors = [{name = "Tu Nombre", email = "tu@email.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]  # ¡Esta línea es crucial!
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--verbose --cov=src --cov-report=term-missing"

[tool.setuptools.packages]
find = {}  # Habilita búsqueda automática de paquetes