[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-guardian"
version = "0.1.0"
description = "CLI/TUI tool to audit and repair Git repositories"
authors = [{ name = "Tu Nombre", email = "tu@email.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
guardian = "guardian.cli:cli"

[tool.ruff]
lint.select = ["E", "F", "W", "I", "B"]
lint.ignore = []
lint.fixable = ["ALL"]
format.quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src --verbose"